syntax = "proto3";

option csharp_namespace = "AElf.SmartContract";

import "kernel.proto";

message SerializeContractMetadataTemplateMap {
    map<string, SerializeFunctionMetadataTemplateMap> MetadataTemplateMapForContract = 2;
}

message SerializeFunctionMetadataTemplateMap {
    map<string, FunctionMetadataTemplate> TemplateMap = 2;
}


message FunctionMetadataTemplate {
    repeated string SerializeCallingSet = 1;
    repeated Resource SerializeLocalResourceSet = 2;
    bool TemplateContainsMetadata = 3;
}

message Resource {
    string Name = 1;
    DataAccessMode DataAccessMode  = 2;
}

// The function meta data describes the data members of contract object.
message FunctionMetadata {
    // AElf allows one contracts to invoke others. This field record
    // which contracts are invoked by the current contract.
    repeated string SerializeCallingSet = 1;
    
    
    // All data members except other contracts are recorded by this field.
    repeated Resource SerializeFullResourceSet = 2;
}

message SerializeFunctionMetadataMap {
    map<string, FunctionMetadata> MetadataMap = 1;
}

message CallingGraphEdges {
    repeated GraphEdge Edges = 1;
}

message GraphEdge {
    string Source = 1;
    string Target = 2;
}

